# sst-autocompiler

./: .gitignore  INSTALL.md  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure.ac  hgcclib.py  hgccvars.py.in  hgcompile.py  hglink.py
acinclude/: check_clang.m4  check_sst_core.m4  check_sst_elements.m4  check_sst_macro.m4
clang/: astVisitor.cc  astVisitorGlobalVars.cc  clangGlobals.h  computeVisitor.cc  frontendActions.cc  globalVarNamespace.h  main.cc  pragmas.cc
tests/: Makefile  build.sh  params.ini  test_tls.cc
